[project]
name = "auto.stocking"
version = "0.1.0"
description = "A Python/Flask-based"
authors = [
    { name = "Jacob.Mi", email = "jacob@metang.me" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "Flask",
    "pandas>=1.1.5",
    "requests",
]

[tool.setuptools]
packages = ["."]
