[project]
name = "auto.stocking"
version = "0.1.0"
description = "A Python/Flask-based"
authors = [
    { name = "Jacob.Mi", email = "jacob@metang.me" }
]
readme = "README.md"
requires-python = ">=3.12"  # 推荐，明确只支持你使用的版本`
dependencies = [
    "Flask",
    "pandas>=1.1.5",
    "requests",
    "akshare"
]

[tool.setuptools]
packages = ["."]
